<resources>
    <string name="app_name">StickerApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Login</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Stick It To \'Em</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username_hint">Username</string>
    <string name="username_info_text_string">Enter username to login or have an account created.</string>

    <string name="log_token">Log Token</string>
    <string name="username">Username</string>
    <string name="user_details">userDetails</string>

    <string name="channel_id">Stick it To \'Em</string>
    <string name="username_input_text">Enter username of user you want to send a sticker to: </string>
    <string name="send">Send!</string>
    <string name="num_stickers_received">Number of stickers sent: %1$s</string>
    <string name="sender">Sender: %1$s</string>

    <string name="channel_name">Sticker Notifcation</string>
    <string name="channel_description">Notification Channel for the Stick It To app</string>

    <string name="history_header">History:</string>
    <string name="logged_in_username">Username: %1$s</string>

</resources>